@@ -310,9 +310,6 @@ constant_shift(long long x, int i)
 void
 testTortureExecute (void)
 {
-#ifndef __SDCC_hc08 // Bug #2782
-#ifndef __SDCC_s08 // Bug #2782
-#ifndef __SDCC_ds390 // Bug #2781
 #if !(defined(__SDCC_mcs51) && (defined(__SDCC_MODEL_SMALL) || defined(__SDCC_MODEL_MEDIUM) || defined(__SDCC_MODEL_LARGE) && defined(__SDCC_STACK_AUTO))) && !defined(__SDCC_pdk14) // Lack of memory// Lack of memory
   int i;
 
@@ -340,9 +337,6 @@ testTortureExecute (void)
       if (y != sext[i])
 	ASSERT (0);
     }
-#endif
-#endif
-#endif
 #endif
   return;
 }
