@@ -5,6 +5,13 @@
 	* device/lib/_rrslonglong.c: fix bug #2704
 	* support/regression/tests/longlong.c: re-enable tests for
 	  hc08/s08/ds390, add more long long shifting tests
+	* support/regression/tests/gcc-torture-execute-ashldi-1.c,
+	* support/regression/tests/gcc-torture-execute-ashrdi-1.c,
+	* support/regression/tests/gcc-torture-execute-divconst-3.c,
+	* support/regression/tests/gcc-torture-execute-lshrdi-1.c,
+	* support/regression/tests/gcc-torture-execute-vrp-7.c:
+	  re-enable tests
+
 
 2019-03-18 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
